[package]
name = "btcprice_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "*", features = ["macros", "sync", "rt-multi-thread"] }
actix-web = "*"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls", "connect"] }

native-tls = "0.2"
serde_json = "1.0"
futures-util = "*"
